--- a/NLP_Assignment.ipynb
+++ b/NLP_Assignment.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,27 +52,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>_index</th>\n",
+       "      <th>_type</th>\n",
+       "      <th>_id</th>\n",
+       "      <th>_score</th>\n",
+       "      <th>_source</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>company</th>\n",
+       "      <td>complaint-public-v2</td>\n",
+       "      <td>complaint</td>\n",
+       "      <td>3229299</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>JPMORGAN CHASE &amp; CO.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>company_public_response</th>\n",
+       "      <td>complaint-public-v2</td>\n",
+       "      <td>complaint</td>\n",
+       "      <td>3229299</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>company_response</th>\n",
+       "      <td>complaint-public-v2</td>\n",
+       "      <td>complaint</td>\n",
+       "      <td>3229299</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Closed with explanation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>complaint_id</th>\n",
+       "      <td>complaint-public-v2</td>\n",
+       "      <td>complaint</td>\n",
+       "      <td>3229299</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3229299</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>complaint_what_happened</th>\n",
+       "      <td>complaint-public-v2</td>\n",
+       "      <td>complaint</td>\n",
+       "      <td>3229299</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Good morning my name is XXXX XXXX and I appreciate it if you could help me put a stop to Chase Bank cardmember services. \\nIn 2018 I wrote to Chase asking for debt verification and what they sent me a statement which is not acceptable. I am asking the bank to validate the debt. Instead I been receiving mail every month from them attempting to collect a debt. \\nI have a right to know this information as a consumer. \\n\\nChase account # XXXX XXXX XXXX XXXX Thanks in advance for your help.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "1     good morning my name is xxxx xxxx and i appreciate it if you could help me put a stop to chase bank cardmember services \\nin i wrote to chase asking for debt verification and what they sent me a statement which is not acceptable i am asking the bank to validate the debt instead i been receiving mail every month from them attempting to collect a debt \\ni have a right to know this information as a consumer \\n\\nchase account  xxxx xxxx xxxx xxxx thanks in advance for your help                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     \n",
-       "2     i upgraded my xxxx xxxx card in and was told by the agent who did the upgrade my anniversary date would not change it turned the agent was giving me the wrong information in order to upgrade the account xxxx   changed my anniversary date from xxxxxxxx to xxxxxxxx without my consent xxxx has the recording of the agent who was misled me                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   \n",
-       "10    chase card was reported on however fraudulent application have been submitted my identity without my consent to fraudulently obtain services do not extend credit without verifying the identity of the applicant                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  \n",
-       "11    on while trying to book a xxxx  xxxx  ticket i came across an offer for to be applied towards the ticket if i applied for a rewards card i put in my information for the offer and within less than a minute was notified via the screen that a decision could not be made i immediately contacted xxxx and was referred to chase bank i then immediately contacted chase bank within no more than of getting the notification on the screen and i was told by the chase representative i spoke with that my application was denied but she could not state why i asked for more information about the xxxx  offer and she explained that even if i had been approved the credit offer only gets applied after the first account statement and could not be used to purchase the ticket i then explicitly told her i was glad i got denied and i was absolutely no longer interested in the account i asked that the application be withdrawn and the representative obliged this all happened no later than after putting in the application on notwithstanding my explicit request not to proceed with the application and contrary to what i was told by the chase representative chase did in fact go ahead to open a credit account in my name on this is now being reported in my credit report and chase has refused to correct this information on my credit report even though they went ahead to process an application which i did not consent to and out of their error\n",
-       "14    my grand son give me check for i deposit it into my chase account after fund clear my chase bank closed my account never paid me my money they said they need to speek with my grand son check was clear money was taking by my chase bank refuse to pay me my money my grand son called chase times they told him i should call not him to verify the check owner he is out the country most the time  date happen check number xxxx claim number is xxxx with chase                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              \n",
-       "Name: text_complaint, dtype: object"
+       "                                      _index      _type      _id  _score  \\\n",
+       "company                  complaint-public-v2  complaint  3229299  0.0      \n",
+       "company_public_response  complaint-public-v2  complaint  3229299  0.0      \n",
+       "company_response         complaint-public-v2  complaint  3229299  0.0      \n",
+       "complaint_id             complaint-public-v2  complaint  3229299  0.0      \n",
+       "complaint_what_happened  complaint-public-v2  complaint  3229299  0.0      \n",
+       "\n",
+       "                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            _source  \n",
+       "company                  JPMORGAN CHASE & CO.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        \n",
+       "company_public_response  None                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        \n",
+       "company_response         Closed with explanation                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     \n",
+       "complaint_id             3229299                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     \n",
+       "complaint_what_happened  Good morning my name is XXXX XXXX and I appreciate it if you could help me put a stop to Chase Bank cardmember services. \\nIn 2018 I wrote to Chase asking for debt verification and what they sent me a statement which is not acceptable. I am asking the bank to validate the debt. Instead I been receiving mail every month from them attempting to collect a debt. \\nI have a right to know this information as a consumer. \\n\\nChase account # XXXX XXXX XXXX XXXX Thanks in advance for your help.  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X"
+    "X.head()"
    ]
   },
   {
